[tool.poetry]
name = "toolbox"
version = "0.1.0"
description = ""
authors = ["UrielPaluch <uripaluch.2@gmail.com>"]
readme = "README.md"

[tool.semantic_release]
version_variable = "pyproject.toml:version"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.33.2"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
